<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.azadt.deutournament.MainActivity">

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="472dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welocomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textSize="26sp"
            tools:text="@string/welcomeText" />

        <ImageView
            android:id="@+id/deuLogo"
            android:layout_width="343dp"
            android:layout_height="208dp"
            app:srcCompat="@drawable/deulogo" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutButton"
            tools:text="@string/aboutButton" />

        <Button
            android:id="@+id/competitionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/competitionsButton" />

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playButtonMain"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playButtonMain" />

            <Button
                android:id="@+id/stopButtonMain"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stopButtonMain" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
